recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: reassignment to val
        angle=angle/(shrink)
             ^Tree:20: error: value :* is not a member of Double
      avance(length:*shrink:Double)
                   ^